# dam

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  ct.yaml  docker-compose.yml  res.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: pvc.yaml
services/imageserver/: README.md  pyproject.toml  settings.toml
services/imageserver/app/: main.py  minio.py  schemas.py  utils.py
services/imageserver/chart/: Chart.yaml  README.md.gotmpl  values.yaml
services/imageserver/chart/templates/: deployment.yaml  ingress.yaml  pvc.yaml
services/imageserver/dockerfiles/: Dockerfile
services/processingserver/: README.md  pyproject.toml  settings.toml
services/processingserver/app/: client.py  config.py  logging.py  main.py  schemas.py
services/processingserver/chart/: Chart.yaml  README.md.gotmpl  values.yaml
services/processingserver/chart/templates/: deployment.yaml
